# djangify_backend

./: .dockerignore  .env.example  .gitignore  .railwayignore  Dockerfile  Procfile  README.md  custom_migrate.sh  docker-compose.yml  manage.py  mkdir backups  nixpacks.toml  project-structure.txt  projectstructure.txt  pyproject.toml  railway.toml  requirements.txt  start.sh  test_db_connection.py
apps/authentication/: apps.py
apps/blog/: admin.py  models.py  serializers.py  urls.py  views.py
apps/blog/migrations/: 0001_initial.py  0002_alter_category_options_alter_tag_options.py
apps/contact/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/contact/migrations/: 0001_initial.py
apps/core/: auth.py  middleware.py  models.py  serializers.py  sitemaps.py  urls.py  utils.py  views.py
apps/portfolio/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/portfolio/migrations/: 0001_initial.py  0002_alter_portfolioimage_options.py  0002_portfolio_status_technology_category.py  0003_alter_technology_options.py  0003_auto_20241121_0822.py  0004_portfolio_live_site_url_and_more.py  0005_remove_portfolio_external_url_type_and_more.py
auth/: ursl.py  views.py
backups/: djangify_backup_20241116.sql
config/: asgi.py  settings.py  urls.py  wsgi.py
config/settings/: base.py  development.py  logging.py  production.py
static/admin/css/: custom_admin.css  forms.css
templates/: index.html
templates/admin/: base_site.html
templates/errors/: 404.html  500.html
