[tool.poetry]
name = "djangify-backend"
version = "0.1.0"
description = "Django Portfolio Backend"
authors = ["Diane Corriette"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.3"
djangorestframework = "^3.15.2"
django-cors-headers = "^4.6.0"
django-filter = "^24.3"
django-summernote = "^0.8.20.0"
whitenoise = "^6.8.2"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
